// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RestCapability /> check that a click on the GET button adds a Hello World message in the console 1`] = `
<Capability
  module="rest"
>
  <Component>
    Http Api
  </Component>
  <Component>
    <Grid
      className=""
      gutter={null}
      lg={null}
      md={null}
      sm={null}
      span={null}
      xl={null}
    >
      <GridItem
        className=""
        lg={null}
        lgOffset={null}
        lgRowSpan={null}
        md={null}
        mdOffset={null}
        mdRowSpan={null}
        offset={null}
        rowSpan={null}
        sm={null}
        smOffset={null}
        smRowSpan={null}
        span={12}
        xl={null}
        xlOffset={null}
        xlRowSpan={null}
      >
        <Split
          className=""
          component="div"
          gutter={null}
        >
          <SplitItem
            className=""
            isMain={false}
          >
            <TextInput
              aria-label={null}
              className=""
              id="http-api-path-input"
              isAlt={false}
              isDisabled={true}
              isReadOnly={false}
              isRequired={false}
              isValid={true}
              onChange={[Function]}
              type="text"
              value="/greetings/"
            />
          </SplitItem>
          <SplitItem
            className=""
            isMain={true}
          >
            <TextInput
              aria-label={null}
              className="http-param"
              id="http-api-name-input"
              isAlt={false}
              isDisabled={false}
              isReadOnly={false}
              isRequired={false}
              isValid={true}
              name="name"
              onChange={[Function]}
              placeholder="World"
              type="text"
              value=""
            />
          </SplitItem>
          <SplitItem
            className=""
            isMain={false}
          >
            <Button
              aria-label={null}
              className="http"
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              onClick={[Function]}
              title="Execute GET Request"
              type="button"
              variant="primary"
            >
              GET
            </Button>
          </SplitItem>
        </Split>
        <Console
          content="> 9:33:13 PM GET http://mocked.io/api/greeting: Hello World!
"
          id="rest-content"
        />
      </GridItem>
      <GridItem
        className=""
        lg={null}
        lgOffset={null}
        lgRowSpan={null}
        md={null}
        mdOffset={null}
        mdRowSpan={null}
        offset={null}
        rowSpan={null}
        sm={null}
        smOffset={null}
        smRowSpan={null}
        span={12}
        xl={null}
        xlOffset={null}
        xlRowSpan={null}
      >
        <p>
          You may test this directly by making an 
          <samp>
            HTTP GET
          </samp>
           request using this application's URL as root. For instance, try with the 
          <samp>
            cURL
          </samp>
           tool:
        </p>
        <ShellCommand
          command="curl http://mocked.io/api/greeting"
        />
      </GridItem>
    </Grid>
  </Component>
</Capability>
`;

exports[`<RestCapability /> check that after typing a name, a click on the GET button adds a Hello John message in the console 1`] = `
<Capability
  module="rest"
>
  <Component>
    Http Api
  </Component>
  <Component>
    <Grid
      className=""
      gutter={null}
      lg={null}
      md={null}
      sm={null}
      span={null}
      xl={null}
    >
      <GridItem
        className=""
        lg={null}
        lgOffset={null}
        lgRowSpan={null}
        md={null}
        mdOffset={null}
        mdRowSpan={null}
        offset={null}
        rowSpan={null}
        sm={null}
        smOffset={null}
        smRowSpan={null}
        span={12}
        xl={null}
        xlOffset={null}
        xlRowSpan={null}
      >
        <Split
          className=""
          component="div"
          gutter={null}
        >
          <SplitItem
            className=""
            isMain={false}
          >
            <TextInput
              aria-label={null}
              className=""
              id="http-api-path-input"
              isAlt={false}
              isDisabled={true}
              isReadOnly={false}
              isRequired={false}
              isValid={true}
              onChange={[Function]}
              type="text"
              value="/greetings/"
            />
          </SplitItem>
          <SplitItem
            className=""
            isMain={true}
          >
            <TextInput
              aria-label={null}
              className="http-param"
              id="http-api-name-input"
              isAlt={false}
              isDisabled={false}
              isReadOnly={false}
              isRequired={false}
              isValid={true}
              name="name"
              onChange={[Function]}
              placeholder="World"
              type="text"
              value="John"
            />
          </SplitItem>
          <SplitItem
            className=""
            isMain={false}
          >
            <Button
              aria-label={null}
              className="http"
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              onClick={[Function]}
              title="Execute GET Request"
              type="button"
              variant="primary"
            >
              GET
            </Button>
          </SplitItem>
        </Split>
        <Console
          content="> 9:33:13 PM GET http://mocked.io/api/greeting?name=John: Hello John!
"
          id="rest-content"
        />
      </GridItem>
      <GridItem
        className=""
        lg={null}
        lgOffset={null}
        lgRowSpan={null}
        md={null}
        mdOffset={null}
        mdRowSpan={null}
        offset={null}
        rowSpan={null}
        sm={null}
        smOffset={null}
        smRowSpan={null}
        span={12}
        xl={null}
        xlOffset={null}
        xlRowSpan={null}
      >
        <p>
          You may test this directly by making an 
          <samp>
            HTTP GET
          </samp>
           request using this application's URL as root. For instance, try with the 
          <samp>
            cURL
          </samp>
           tool:
        </p>
        <ShellCommand
          command="curl http://mocked.io/api/greeting?name=John"
        />
      </GridItem>
    </Grid>
  </Component>
</Capability>
`;

exports[`<RestCapability /> check that initial render is correct 1`] = `
<Capability
  module="rest"
>
  <Component>
    Http Api
  </Component>
  <Component>
    <Grid
      className=""
      gutter={null}
      lg={null}
      md={null}
      sm={null}
      span={null}
      xl={null}
    >
      <GridItem
        className=""
        lg={null}
        lgOffset={null}
        lgRowSpan={null}
        md={null}
        mdOffset={null}
        mdRowSpan={null}
        offset={null}
        rowSpan={null}
        sm={null}
        smOffset={null}
        smRowSpan={null}
        span={12}
        xl={null}
        xlOffset={null}
        xlRowSpan={null}
      >
        <Split
          className=""
          component="div"
          gutter={null}
        >
          <SplitItem
            className=""
            isMain={false}
          >
            <TextInput
              aria-label={null}
              className=""
              id="http-api-path-input"
              isAlt={false}
              isDisabled={true}
              isReadOnly={false}
              isRequired={false}
              isValid={true}
              onChange={[Function]}
              type="text"
              value="/greetings/"
            />
          </SplitItem>
          <SplitItem
            className=""
            isMain={true}
          >
            <TextInput
              aria-label={null}
              className="http-param"
              id="http-api-name-input"
              isAlt={false}
              isDisabled={false}
              isReadOnly={false}
              isRequired={false}
              isValid={true}
              name="name"
              onChange={[Function]}
              placeholder="World"
              type="text"
              value=""
            />
          </SplitItem>
          <SplitItem
            className=""
            isMain={false}
          >
            <Button
              aria-label={null}
              className="http"
              component="button"
              isActive={false}
              isBlock={false}
              isDisabled={false}
              isFocus={false}
              isHover={false}
              onClick={[Function]}
              title="Execute GET Request"
              type="button"
              variant="primary"
            >
              GET
            </Button>
          </SplitItem>
        </Split>
        <Console
          content=""
          id="rest-content"
        />
      </GridItem>
      <GridItem
        className=""
        lg={null}
        lgOffset={null}
        lgRowSpan={null}
        md={null}
        mdOffset={null}
        mdRowSpan={null}
        offset={null}
        rowSpan={null}
        sm={null}
        smOffset={null}
        smRowSpan={null}
        span={12}
        xl={null}
        xlOffset={null}
        xlRowSpan={null}
      >
        <p>
          You may test this directly by making an 
          <samp>
            HTTP GET
          </samp>
           request using this application's URL as root. For instance, try with the 
          <samp>
            cURL
          </samp>
           tool:
        </p>
        <ShellCommand
          command="curl http://mocked.io/api/greeting"
        />
      </GridItem>
    </Grid>
  </Component>
</Capability>
`;
